fix overflow

--- a/src/styles/mixins.styl
+++ b/src/styles/mixins.styl
@@ -20,6 +20,7 @@ button()
   max-width 100%
   width $button-width
   height $button-height
+  overflow hidden
 
   .icon
     display block
